src/index.css
/* ... */
.icon_size_container div {
    width: 100%;
    padding: 4px;
    padding-top: 6px;
    padding-left: 5px;
    cursor: default;
}

.icon_size_container div:hover {
    background: #040d91;
    color: white;
}

.icon_size_container p {
    position: relative;
    font-size: 12px;
    left: 19px;
}

/* ------------------ Calender ----------------- */
.calender_container {
    display: grid;
    position: absolute;
    place-items: center;
    width: fit-content;
    height: auto;
    background: #c5c2c2;
    border: 2px solid white;
    border-bottom-color: black;
    border-right-color: black;
    padding: 10px;
    bottom: 2.2rem;
    right: 0;
    z-index: 9999999999999;
    overflow: hidden;
}

.react-calendar {
    display: grid;
    width: 210px;
    height: 175px;
    place-items: center;
    text-align: center;
}

.react-calendar__navigation {
    display: flex;
    justify-content: space-around;
    gap: 2px;
    margin-bottom: 4px;
}

.react-calendar__navigation__label {
    pointer-events: none;
    white-space: nowrap;
}

.react-calendar__navigation__label span {
    position: relative;
    top: 1px;
}

.react-calendar__navigation button {
    border-radius: 0px;
    border: 1px solid black;
    border-top-color: white;
    border-left-color: white;
}

.react-calendar__navigation button:active {
    border: 1px solid white;
    border-top-color: black;
    border-left-color: black;
}

.react-calendar__navigation button {
    font-size: 13px;
}

.react-calendar__month-view__weekdays {
    position: relative;
    font-size: 12px;
}

.react-calendar__month-view__days {
    padding: 5px;
}

.react-calendar__month-view__days button>abbr {
    position: relative;
    top: 1px;
}

.react-calendar__month-view__days button {
    font-size: 12px;
    border: none;
    padding: 4px;
    
}

.react-calendar__month-view__days button:hover {
    background: #0000001a;
}

.react-calendar__month-view__weekdays__weekday {
    cursor: default;
}

/* --------------- DragDrop ----------------- */

.bound {
    width: 100svw;
    height: 96svh;
    padding-top: .5rem;
    padding-right: .5rem;
    overflow: hidden;
}

.drag_drop {
    display: flex;
    position: relative;
    height: 98%;
    flex-direction: column;
    flex-wrap: wrap;
    width: 1px;
    column-gap: 1rem;
    padding-top: 1rem;
    padding-left: .6rem;
}


.icon {
    display: grid;
    position: relative;
    place-items: center;
    height: 70px;
    width: 65px;
    gap: 4px;
    margin-bottom: .9rem;
    cursor: default;
    z-index: 2;

}

.icon img {
    position: relative;
    width: 35px;
    pointer-events: none;
}

.icon .img_focus {
    filter: brightness(8%) sepia(10) saturate(50) hue-rotate(200deg);
}

.icon p {
    position: relative;
    font-size: 12px;
    color: white;
    padding-left: 1px; 
    padding-top: 2px;
    border: 1px dotted rgba(255, 255, 255, 0);
    text-align: center;
    line-height: 11px;

}

.icon .p_focus {
    background: #091558;
    border: 1px dotted white;
}

.icon:active {
    opacity: 0.7;
    z-index: 999999999999999;
    /* background: #00000075; */
}


/* ------------- WIMAMP ---------------- */

.winampRef {
    position: absolute;
    margin-left: 12rem;
    z-index: -1;
    width: 100px;
    height: 800px;
    top: 1rem;
}

#webamp {
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}



/* -------------- clippy ---------------- */

.clippy_container {
    position: absolute;
    width: 100px;
    height: 100px;
    right: 12px;
    bottom: 2rem;
    z-index: 1000;
}

/* --- disable hover touch ---- */

.clippy_container { 
    -webkit-tap-highlight-color: rgba(0,0,0,0);
    -webkit-tap-highlight-color: transparent;
}
  

.clippy_container img{
    width: 100px;
    z-index: 1004;
}

.clippy_container .bubble_chat {
    position: absolute;
    width: 190px;
    top: -4rem;
    left: -5.8rem;
    padding-top: 8px;
    padding-bottom: 8px;
    padding-left: 8px;
    padding-right: 6px;
    border-radius: 5px;
    border: 1px solid black;
    background: rgb(216, 218, 165);
    z-index: 1002;
    cursor: default;
    
}

.clippy_container .bubble_chat p {
    font-size: 12px; 
    word-break: break-word;
 }

.clippy_container .bubble_chat::before {
    content: '';
    position: absolute;
    width: 0px;
    bottom: -1rem;
    left: 7.4rem;
    border-left: 10px;
    border-top: 14px;
    border-style: solid;
    border-color: rgb(216, 218, 165)  transparent transparent transparent;
    transform: scaleY(1.5);
    z-index: 1003;
}

